
Slick 7.x-2.0-dev, 2015-4-14
----------------------------
Fixed typo at slick.api.php.
Fixed edge cases Media Youtube, Vimeo, Soundcloud disabled while being used.
Fixed edge case Picture module disabled while being used by Slick.
Added a simple coded slick example to slick.api.php.
Added slick_build() to simplify building a slick programatically.

Slick 7.x-2.0-dev, 2015-4-11
----------------------------
Issue #2466073 by gausarts: Use data-slick to store options.
  Be sure to clear cache, or re-generate JS if aggregation is on.
Issue #2466327 by rHOnDO: Allow alterable caption HTML tags.
Added slick_filter_xss_admin() to ease up extending allowed tags restrictively
  which can be set using variable_set('slick_allowed_tags', $allowed_tags).
  Be sure to clear cache.
Fixed slick_example hook_views_api() api version from Bulk exporter.
Updated slick.load.devel.js to test the options using data-slick.

Slick 7.x-2.0-dev, 2015-4-6
---------------------------
Updated slick.load.min.js slide--current class to reflect the new grid option.
Added info to Slick Views about the difference between Module grid and the
  library grid. The module Grid feature has been around before the Slick library
  officiallly supported it at Slick 1.5.
Added options for builtin Grid system: rows and slidesPerRow.
Updated the verticalScrolling option to verticalSwiping. Be sure to re-save it
  to pick-up the newly renamed option.
Updated to Slick 1.5.

Slick 7.x-2.0-dev, 2015-3-31
----------------------------
\o/ at last .... happy for a great Alpha release ;)
Added various relevant useful info somewhere to clarify the intention.
Added relevant info on sanitization at slick.theme.inc which should be handled
  by implementors since most are renderable array.
Added sanitization on Slick Views slide captions.
Updated slick_devel_preprocess_slick() to drop data-slick test to reflect its
  removal at Slick 1.5, see:
  https://github.com/kenwheeler/slick/issues/1058